# slime_sim

./: CMakeLists.txt  README.md
cmake/: gcc_analyze.cmake
docker/: Dockerfile
src/: CMakeLists.txt  main.cpp
src/logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/sim/: CMakeLists.txt  Simulation.cpp  Simulation.hpp  Slime.cpp  Slime.hpp  Species.cpp  Species.hpp  TickDurationHistory.cpp  TickDurationHistory.hpp  TickRate.cpp  TickRate.hpp  Types.cpp  Types.hpp
src/ui/: UiContext.cpp
src/ui/resources/: CMakeLists.txt  ui_resources.c.xml
src/ui/resources/shader/blur/: blur.frag
src/ui/resources/shader/screen_square/: screen_square.frag
src/ui/resources/shader/slime/: slime.comp
src/ui/resources/shader/species_preview/: species_preview.frag
src/ui/widgets/: CMakeLists.txt  SimulationOverlayWidget.cpp  SimulationOverlayWidget.hpp  SimulationSettingsBarWidget.cpp  SimulationSettingsBarWidget.hpp  SimulationWidget.cpp  SimulationWidget.hpp  SpeciesPreviewCairoWidget.cpp  SpeciesPreviewCairoWidget.hpp  SpeciesPreviewWidget.cpp  SpeciesPreviewWidget.hpp  TitleWidget.cpp  TitleWidget.hpp
src/ui/widgets/opengl/: AbstractGlObject.cpp  AbstractGlObject.hpp  BlurGlObject.cpp  CMakeLists.txt  ScreenSquareGlObject.cpp  ScreenSquareGlObject.hpp  Slime.cpp  Slime.hpp  SlimeGlObject.cpp  SlimeGlObject.hpp  SpeciesPreviewGlObject.cpp  SpeciesPreviewGlObject.hpp
src/ui/widgets/opengl/fb/: AbstractGlFrameBuffer.cpp  CMakeLists.txt  SlimeFrameBuffer.cpp  SlimeFrameBuffer.hpp
src/ui/windows/: MainWindow.cpp  MainWindow.hpp
